# payload-cms-cli

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/xgic/: __init__.py
src/xgic/cli/: __init__.py
src/xgic/cli/payload/: __init__.py  config.py  env_helpers.py  plugin.py  project.py
src/xgic/cli/payload/commands/: __init__.py  dev.py  payload_env.py  reset.py  schema.py  setup.py
tests/: test_config.py  test_env_helpers.py  test_plugin_commands.py  test_project.py
