[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "xgic-payload-cms-cli"
version = "0.1.0"
description = "XGIC CLI Payload CMS module - project ensure/create helpers and product defaults (xgic.cli.payload)."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "XGIC" }
]
requires-python = ">=3.14"
dependencies = [
    "xgic-cli>=0.2.0",
    "xgic-dev-cli>=0.1.0",
    "rich>=13.7",
]
keywords = [
    "xgic",
    "cli",
    "payload-cms",
    "orchestration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/xgic/payload-cms-cli"
Repository = "https://github.com/xgic/payload-cms-cli"
Issues = "https://github.com/xgic/payload-cms-cli/issues"
Documentation = "https://github.com/xgic/payload-cms-cli#readme"
Changelog = "https://github.com/xgic/payload-cms-cli/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
test = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xgic"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
    "NOTICE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["xgic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Do not set pythonpath=src — that shadows installed xgic-cli / xgic-dev-cli.